# Banec

./: .gitignore  Makefile  README.md  meson.build  meson_options.txt
include/blibc/: ctype.h  dirent.h  errno.h  fcntl.h  limits.h  null.h  signal.h  stat.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  syscall.h  termios.h  time.h  types.h  unistd.h
include/config/: global.h  ls.h  pwd.h  uname.h
include/util/: proc.h
src/blibc/: dirent.c  errno.c  stat.c  string.c  syscall.c  time.c  unistd.c
src/blibc/special/: crt0.c  start.S
src/blibc/stdlib/: atoi.c  fileio.c  malloc.c  printf.c  qsort.c  scanf.c
src/coreutils/: cat.c  clear.c  date.c  echo.c  false.c  kill.c  ls.c  mkdir.c  pkill.c  pwd.c  rm.c  rmdir.c  segfault.c  testutil.c  true.c  uname.c  whoami.c
